changelog

-- next

+ Negated search -terms.

+ A raw sendactivity API action for the bold.

+ More flexible meme names.

-- 0.8.5 Turnkey Blaster

+ Codenames in changelog.

+ Fix some bugs that may have interfered with federation.

+ Add some re: re: re: to replies.

+ Set an avatar. If you must.

+ Try a little harder to recover from httpsig failures.

+ Add cite tag for block quote attributions.

+ @media print styles.

+ Disable overscroll (pull down) refresh.

+ Can never seem to version the changelog correctly.

-- 0.8.4

+ Fix bug preventing import of keys

+ Option to switch map links to Apple.

-- 0.8.3

- mistag.

-- 0.8.2 Game Warden

++ Import command to preserve those embarssassing old posts from Twitter.

++ Add a limited /api for the robotrons.

+ Resource usage stats on about page.

+ Unveil and pledge restrictions on OpenBSD.

+ Lists supported in markdown.

+ Rewrite admin console to avoid large dependencies.

+ "Bug" fixes.

-- 0.8.1

++ Make it easier to upgrade by decoupling data dir from ".".

+ Timestamps displayed in server time with TZ.

+ version command to print current version.

+ Amend changelog for 0.8.0 to include omitted elements:
	Syntax highlighting for code blocks.
	Something resembling an actual manual.

-- 0.8.0 Ordinary Octology

+++ Add Honk Filtering and Censorship System (HFCS).

+++ Editing honks (Update activity).

++ Subscribe to hashtags.

++ Search. I hate it already.

++ Hashtags that work?

++ Dynamic refresh and page switching without reloads.

++ Reply control. Ack replies to show them on the site.

+ Allow PDF attachments. For serious business only.

+ "untag me" button to mute part of a thread.

+ Inline images in posts. Send and receive.

+ Somewhat functional admin console (TTY).

+ More JS free fallbacks for some basic functions.

+ Add chpass command.

+ Improved honker management.

+ Better markdown output.

+ Times for events.

+ Split media database into separate blob.db.
